2006-09-24  Brian Bidulock  <bidulock@openss7.org>

	* lib/libc/streams.h: added

	* AUTHORS: updated release notes
	* BUGS: updated release notes
	* NEWS: updated release notes
	* README: updated release notes
	* README-alpha: updated release notes
	* README-cvs: updated release notes
	* README-nexusware: updated release notes
	* THANKS: updated release notes
	* TODO: updated release notes
	* doc/manual/bugs.texi: updated release notes
	* doc/manual/news.texi: updated release notes
	* doc/manual/todo.texi: updated release notes

	* streams.dox.in: doxygen updates
	* include/stropts.h: doxygen updates
	* include/sys/streams/stropts.h: doxygen updates
	* include/sys/streams/testmod.h: doxygen updates

	* lib/libc/fattach.c: straightened out lib files
	* lib/libc/fdetach.c: straightened out lib files
	* lib/libc/getmsg.c: straightened out lib files
	* lib/libc/getpmsg.c: straightened out lib files
	* lib/libc/isastream.c: straightened out lib files
	* lib/libc/pipe.c: straightened out lib files
	* lib/libc/putmsg.c: straightened out lib files
	* lib/libc/putpmsg.c: straightened out lib files
	* lib/libc/testcancel.c: straightened out lib files

2006-09-23  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated news and todo
	* doc/manual/news.texi: updated news and todo
	* doc/manual/todo.texi: updated news and todo
	* NEWS: updated news and todo
	* TODO: updated news and todo

2006-09-22  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated todo items
	* TODO: updated todo items
	* doc/manual/todo.texi: updated todo items

	* doc/man/Makefile.am: added manual pages
	* doc/man/man7/streamio.7.man: added manual pages
	* doc/man/man7/I_EGETSIG.7.man: added manual pages
	* doc/man/man7/I_ESETSIG.7.man: added manual pages

	* include/stropts.h: prepared header file for doxygen
	* include/sys/stropts.h: prepared header file for doxygen
	* include/sys/streams/log.h: prepared header file for doxygen
	* include/sys/streams/loop.h: prepared header file for doxygen