@@ -1,4 +1,4 @@
-Linux Fast-STREAMS -- read me first file.  2006-09-24
+Linux Fast-STREAMS -- read me first file.  2006-09-22
 $Id: README,v 0.9.2.17 2006/09/24 21:56:58 brian Exp $
 Copyright (c) 2001-2006  OpenSS7 Corporation. <http://www.openss7.com/>
 Copyright (c) 1997-2000  Brian Bidulock <bidulock@openss7.org>
@@ -33,7 +33,7 @@ for embedded targets.
  Release
 --------
 
-This is the `streams-0.7a.6.rc3' package, released 2006-09-24.  This
+This is the `streams-0.7a.6.rc3' package, released 2006-09-22.  This
 `0.7a.6.rc3' release, and the latest version, can be obtained from the
 download area (http://www.openss7.org/download.html) of The OpenSS7
 Project website using a command such as:
