@@ -1,4 +1,4 @@
-Linux Fast-STREAMS -- beta release introduction.  2006-09-24
+Linux Fast-STREAMS -- beta release introduction.  2006-09-22
 $Id: README-alpha,v 0.9.2.17 2006/09/24 21:56:58 brian Exp $
 Copyright (c) 2001-2006  OpenSS7 Corporation. <http://www.openss7.com/>
 Copyright (c) 1997-2000  Brian Bidulock <bidulock@openss7.org>
@@ -7,7 +7,7 @@ See the end for copying conditions (for this file).
 Linux Fast-STREAMS
 ==================
 
-Package streams-0.7a.6.rc3 Released 2006-09-24.
+Package streams-0.7a.6.rc3 Released 2006-09-22.
 
 This is beta release software.
 
